--- a/net/irssi-icb/Makefile
+++ b/net/irssi-icb/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.37 2016/03/13 14:36:58 sthen Exp $
+# $OpenBSD: Makefile,v 1.38 2016/03/14 00:47:47 nigel Exp $
 
 SHARED_ONLY=	Yes
 
@@ -12,8 +12,6 @@ DISTNAME=	irssi-icb-0.16pre20160307
 
 CATEGORIES=     net
 
-BUILD_DEPENDS=	net/irssi \
-		devel/glib2
 RUN_DEPENDS=	net/irssi
 
 # GPLv2+
@@ -27,7 +25,9 @@ AUTOCONF_VERSION= 2.69
 AUTOMAKE_VERSION= 1.15
 BUILD_DEPENDS=	${MODGNU_AUTOCONF_DEPENDS} \
 		${MODGNU_AUTOMAKE_DEPENDS} \
-		devel/libtool
+		devel/glib2 \
+		devel/libtool \
+		net/irssi
 
 post-patch:
 	cd ${WRKSRC} && AUTOCONF_VERSION=${AUTOCONF_VERSION} \
