--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.406 2016/03/05 12:12:16 sthen Exp $
+# $OpenBSD: Makefile,v 1.407 2016/03/15 21:47:36 awolk Exp $
 
      SUBDIR =
      SUBDIR += DevIL
@@ -30,6 +30,7 @@
      SUBDIR += comix
      SUBDIR += compface
      SUBDIR += cqcam
+     SUBDIR += cstitch
      SUBDIR += ctl
      SUBDIR += darktable
      SUBDIR += dcmtk
