--- a/lang/php/Makefile
+++ b/lang/php/Makefile
@@ -1,11 +1,9 @@
-# $OpenBSD: Makefile,v 1.6 2015/03/21 22:33:21 sthen Exp $
+# $OpenBSD: Makefile,v 1.7 2016/03/17 16:54:12 sthen Exp $
 
 SUBDIR =
 SUBDIR += 5.4
-SUBDIR += 5.4,ap2
 SUBDIR += 5.5
-SUBDIR += 5.5,ap2
 SUBDIR += 5.6
-SUBDIR += 5.6,ap2
+SUBDIR += 7.0
 
 .include <bsd.port.subdir.mk>
