--- a/lang/php/Makefile
+++ b/lang/php/Makefile
@@ -1,9 +1,11 @@
-# $OpenBSD: Makefile,v 1.7 2016/03/17 16:54:12 sthen Exp $
+# $OpenBSD: Makefile,v 1.8 2016/03/17 16:58:01 sthen Exp $
 
 SUBDIR =
 SUBDIR += 5.4
+SUBDIR += 5.4,ap2
 SUBDIR += 5.5
+SUBDIR += 5.5,ap2
 SUBDIR += 5.6
-SUBDIR += 7.0
+SUBDIR += 5.6,ap2
 
 .include <bsd.port.subdir.mk>
