--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.361 2016/03/16 19:32:32 naddy Exp $
+# $OpenBSD: Makefile,v 1.362 2016/03/18 14:35:15 sebastia Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.206
+PKGNAME =	quirks-2.207
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
