--- a/net/irssi-xmpp/Makefile
+++ b/net/irssi-xmpp/Makefile
@@ -1,14 +1,10 @@
-# $OpenBSD: Makefile,v 1.7 2016/03/17 23:23:20 jung Exp $
+# $OpenBSD: Makefile,v 1.8 2016/03/18 19:29:03 jung Exp $
 
 SHARED_ONLY=		Yes
 
 COMMENT=		XMPP plugin for irssi
 
-DISTNAME=		irssi-xmpp-0.52pl20160317
-
-GH_ACCOUNT =		cdidier
-GH_PROJECT =		irssi-xmpp
-GH_COMMIT =		55cc27bd8d60a5c835050f654e80deb1afe36986
+DISTNAME=		irssi-xmpp-0.53
 
 CATEGORIES=		net
 
@@ -20,6 +16,8 @@ MAINTAINER =		Joerg Jung <jung@openbsd.org>
 PERMIT_PACKAGE_CDROM=	Yes
 
 WANTLIB=		glib-2.0 idn loudmouth-1
+
+MASTER_SITES=		${HOMEPAGE}files/
 
 MODULES=		devel/gettext
 
