--- a/x11/gnome/mono-gnome/Makefile
+++ b/x11/gnome/mono-gnome/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.33 2016/03/19 10:08:24 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.34 2016/03/19 10:12:26 ajacoutot Exp $
 
 COMMENT=	.NET language bindings for assorted GNOME libraries
 
 GNOME_PROJECT=	gnome-sharp
 GNOME_VERSION=	2.24.2
 PKGNAME=	mono-gnome-${VERSION}
-REVISION=	5
+REVISION=	6
 
 CATEGORIES=	x11
 
@@ -45,5 +45,8 @@ DLLMAP_FILES=	art/art-sharp.dll.config \
 pre-configure:
 	find ${WRKSRC} -name *\.pc.in -exec sed -i \
 		's,^prefix=.*,prefix=\@prefix\@,' {} \;
+
+post-install:
+	rm ${PREFIX}/lib/libgnomesharpglue-2.{a,la}
 
 .include <bsd.port.mk>
