--- a/net/ocserv/Makefile
+++ b/net/ocserv/Makefile
@@ -1,8 +1,8 @@
-# $OpenBSD: Makefile,v 1.13 2016/02/25 10:22:01 sthen Exp $
+# $OpenBSD: Makefile,v 1.14 2016/03/19 20:03:46 sthen Exp $
 
 COMMENT=	server implementing the AnyConnect SSL VPN protocol
 
-DISTNAME=	ocserv-0.10.12
+DISTNAME=	ocserv-0.11.1
 EXTRACT_SUFX=	.tar.xz
 
 CATEGORIES=	net
@@ -14,16 +14,17 @@ MAINTAINER=	Stuart Henderson <sthen@openbsd.org>
 # GPLv2+
 PERMIT_PACKAGE_CDROM=	Yes
 
-WANTLIB += c gnutls lz4 ncurses oath pam protobuf-c pthread
-WANTLIB += radcli readline talloc
+WANTLIB += c ev gnutls lz4 m ncurses nettle oath pam protobuf-c
+WANTLIB += pthread radcli readline talloc
 
 MASTER_SITES=	ftp://ftp.infradead.org/pub/ocserv/
 
 MODULES=	devel/gettext
 LIB_DEPENDS=	archivers/lz4 \
-		devel/protobuf-c \
+		devel/libev \
 		devel/libtalloc \
-		net/radcli \
+		devel/protobuf-c \
+		net/radcli>=1.2.5 \
 		security/gnutls \
 		security/oath-toolkit \
 		security/openpam
@@ -48,7 +49,7 @@ post-extract:
 	    ${WRKSRC}/tests/test-iroute
 	sed -i 's,/usr/local/sbin/openconnect,${LOCALBASE}/sbin/openconnect,' \
 	    ${WRKSRC}/tests/common.sh
-	sed -i 's,/etc/ocserv,${SYSCONFDIR}/ocserv,' ${WRKSRC}/src/ocpasswd.c
+	sed -i 's,/etc/ocserv,${SYSCONFDIR}/ocserv,' ${WRKSRC}/src/ocpasswd/ocpasswd.c
 	cd ${WRKSRC}; \
 	    sed -i 's,/usr/bin/ocserv-fw,${SYSCONFDIR}/ocserv/ocserv-fw,g' \
 	    src/ocserv-args.def src/main-user.c doc/ocserv.8 doc/sample.config
