--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.1473 2016/03/19 10:23:11 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.1474 2016/03/19 20:24:28 okan Exp $
 
      SUBDIR =
      SUBDIR += ElectricFence
@@ -954,9 +954,7 @@
      SUBDIR += p5-SVN-Notify
      SUBDIR += p5-SVN-Simple
      SUBDIR += p5-SVN-Web
-     SUBDIR += p5-Safe-Hole
      SUBDIR += p5-Safe-Isa
-     SUBDIR += p5-Safe-World
      SUBDIR += p5-Scalar-Defer
      SUBDIR += p5-Scope-Guard
      SUBDIR += p5-Scope-Upper
@@ -967,9 +965,6 @@
      SUBDIR += p5-Set-Scalar
      SUBDIR += p5-Shell-Command
      SUBDIR += p5-Signal-Mask
-     SUBDIR += p5-Slay-Makefile
-     SUBDIR += p5-Slay-Makefile-Gress
-     SUBDIR += p5-Slay-Maker
      SUBDIR += p5-Smart-Comments
      SUBDIR += p5-Sort-Key
      SUBDIR += p5-Sort-Naturally
