--- a/audio/openal/Makefile
+++ b/audio/openal/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.35 2016/04/09 14:50:59 sthen Exp $
+# $OpenBSD: Makefile,v 1.36 2016/04/09 21:11:56 sthen Exp $
 
 BROKEN-arm =	undefined reference to __sync atomic ops
 BROKEN-hppa =	undefined reference to __sync atomic ops
@@ -8,13 +8,15 @@ COMMENT =	cross-platform 3D audio API
 
 V =		1.15.1
 EPOCH =		0
-REVISION =	2
+REVISION =	3
 DISTNAME =	openal-soft-$V
 PKGNAME =	openal-$V
 CATEGORIES =	audio
 SHARED_LIBS =	openal	2.2
 
 HOMEPAGE =	http://kcat.strangesoft.net/openal.html
+
+MAINTAINER =	David Carlier <devnexen@gmail.com>
 
 # LGPLv2+
 PERMIT_PACKAGE_CDROM =	Yes
